// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bars should display the bars correctly 1`] = `
<div
  aria-busy={undefined}
  aria-disabled={undefined}
  aria-expanded={false}
  className="ui fluid search selection dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex={undefined}
>
  <select
    aria-hidden="true"
    multiple={undefined}
    name={undefined}
    type="hidden"
    value=""
  >
    <option
      value=""
    />
    <option
      value="0"
    >
      The Pot Still
    </option>
    <option
      value="1"
    >
      Stereo & The Old Hairdressers
    </option>
  </select>
  <input
    aria-autocomplete="list"
    autoComplete="off"
    className="search"
    name="-search"
    onChange={[Function]}
    style={
      Object {
        "width": undefined,
      }
    }
    tabIndex={0}
    type="text"
    value=""
  />
  <div
    className="default text"
  >
    Select bar..
  </div>
  <i
    aria-hidden="true"
    className="dropdown icon"
  />
  <div
    aria-multiselectable={undefined}
    className="menu transition"
    role="listbox"
  >
    <div
      address="154 Hope Street"
      aria-checked={false}
      aria-disabled={undefined}
      aria-selected={true}
      className="selected item"
      id={1}
      image_url="./potstill.jpg"
      lat={0}
      long={0}
      name="The Pot Still"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="description"
      >
        A real local favourite, receiving more shout-outs from our followers than anywhere else. It’s a small pub with a massive drink selection, particularly if you’re in the mood for a whisky. 
      </span>
      <span
        className="text"
      >
        The Pot Still
      </span>
    </div>
    <div
      address="Renfield Lane"
      aria-checked={false}
      aria-disabled={undefined}
      aria-selected={false}
      className="item"
      id={2}
      image_url="./stereo.png"
      lat={0}
      long={0}
      name="Stereo & The Old Hairdressers"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="description"
      >
        These are actually two separate bars, but they have the same vibe, same owner and are right next to each other. Both have a chilled out, stripped back aesthetic and well stocked bars.
      </span>
      <span
        className="text"
      >
        Stereo & The Old Hairdressers
      </span>
    </div>
  </div>
</div>
`;

exports[`Bars should render the Bars component and pass the bars and selectBar function down as props 1`] = `
<div
  aria-busy={undefined}
  aria-disabled={undefined}
  aria-expanded={false}
  className="ui fluid search selection dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="combobox"
  tabIndex={undefined}
>
  <select
    aria-hidden="true"
    multiple={undefined}
    name={undefined}
    type="hidden"
    value=""
  >
    <option
      value=""
    />
    <option
      value="0"
    >
      The Pot Still
    </option>
    <option
      value="1"
    >
      Stereo & The Old Hairdressers
    </option>
  </select>
  <input
    aria-autocomplete="list"
    autoComplete="off"
    className="search"
    name="-search"
    onChange={[Function]}
    style={
      Object {
        "width": undefined,
      }
    }
    tabIndex={0}
    type="text"
    value=""
  />
  <div
    className="default text"
  >
    Select bar..
  </div>
  <i
    aria-hidden="true"
    className="dropdown icon"
  />
  <div
    aria-multiselectable={undefined}
    className="menu transition"
    role="listbox"
  >
    <div
      aria-checked={false}
      aria-disabled={undefined}
      aria-selected={true}
      className="selected item"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="text"
      >
        The Pot Still
      </span>
    </div>
    <div
      aria-checked={false}
      aria-disabled={undefined}
      aria-selected={false}
      className="item"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="text"
      >
        Stereo & The Old Hairdressers
      </span>
    </div>
  </div>
</div>
`;
